remove option and no forking