@@ -8,6 +8,3 @@ libraryDependencies += "org.apache.spark" %% "spark-core" % "1.3.1"
 
 libraryDependencies += "org.apache.spark" %% "spark-hive-thriftserver" % "1.3.1"
 
-fork := true
-
-javaOptions in run += "-Xmx512m -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512m"
